syntax = "proto3";

option csharp_namespace = "ESCS.Grpc.Protos";

import "google/protobuf/empty.proto";
package user;


message UserEmailConfig{
	int64 id = 1;
    string smtpEmail = 2;
    int32 smtpPort = 3;
	string smtpServer = 4;
    string smtpPassword = 5;
    int64 userId = 6;
    int64 serviceId = 7;
	bool isActive = 8;
	bool isEnableSsl = 9;
}

message ValidateUserApiKeyRequest{
	string key = 1;
	string requestPath = 2;
	string method = 3;  
}

message ValidateUserApiKeyResponse{
	int64 userId = 1;
}


message GetUserEmailConfigByEmailRequest{
	string email = 1;
}

message GetUserEmailConfigByEmailResponse{
	 UserEmailConfig userEmailConfig = 1;
}


service UserProtoService{
	rpc ValidateUserApiKey(ValidateUserApiKeyRequest) returns (ValidateUserApiKeyResponse);
	rpc GetUserEmailConfigByEmail(GetUserEmailConfigByEmailRequest) returns (GetUserEmailConfigByEmailResponse);
}